Remove "invisible" CSS class Convert "delete quiz" dialog to a script template and a Backbone.View Add a tooltip to the cancel button inside the QuizEditorView, and ensure it is removed when the cancel button is clicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-.invisible {
-  display: none
-}
-
 body {
  padding: 45px;
 }
